--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>servers/micro-service/surveying</module>
+        <module>website/mp-manager</module>
     </modules>
 
     <dependencyManagement>
