--- a/website/mp-manager/src/main/webapp/WEB-INF/web.xml
+++ b/website/mp-manager/src/main/webapp/WEB-INF/web.xml
@@ -1,7 +1,27 @@
-<!DOCTYPE web-app PUBLIC
- "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
- "http://java.sun.com/dtd/web-app_2_3.dtd" >
-
-<web-app>
+<?xml version="1.0" encoding="UTF-8"?>
+<web-app version="3.0"
+         xmlns="http://java.sun.com/xml/ns/javaee"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
+	http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
   <display-name>Archetype Created Web Application</display-name>
+  <welcome-file-list>
+    <welcome-file>index.html</welcome-file>
+  </welcome-file-list>
+  <filter>
+    <filter-name>pageFilter</filter-name>
+    <filter-class>com.domeastudio.mappingo.filter.SessionCheckFilter</filter-class>
+    <init-param>
+      <param-name>excludedPages</param-name>
+      <param-value>/index.html;/login.do;.png;.gif;.jpg;.css;.js;registor.html;.woff2;.woff;.ttf</param-value>
+    </init-param>
+    <init-param>
+      <param-name>homePage</param-name>
+      <param-value>/index.html</param-value>
+    </init-param>
+  </filter>
+  <filter-mapping>
+    <filter-name>pageFilter</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
 </web-app>
