--- a/servers/micro-service/surveying/src/main/resources/application.yml
+++ b/servers/micro-service/surveying/src/main/resources/application.yml
@@ -76,6 +76,8 @@ spring:
       database: mappingosys
       username: mappingo
       password: mappingo
+  jpa:
+    open-in-view: true
 server:
   port: 8050
 flowable:
