--- a/website/mp-manager/pom.xml
+++ b/website/mp-manager/pom.xml
@@ -19,18 +19,18 @@
             <scope>provided</scope>
         </dependency>
         <!-- https://mvnrepository.com/artifact/org.json/json -->
-        <dependency>
-            <groupId>org.json</groupId>
-            <artifactId>json</artifactId>
-            <version>20171018</version>
-        </dependency>
-
-        <!--&lt;!&ndash; https://mvnrepository.com/artifact/us.monoid.web/resty &ndash;&gt;-->
         <!--<dependency>-->
-        <!--<groupId>us.monoid.web</groupId>-->
-        <!--<artifactId>resty</artifactId>-->
-        <!--<version>0.3.2</version>-->
+            <!--<groupId>org.json</groupId>-->
+            <!--<artifactId>json</artifactId>-->
+            <!--<version>20171018</version>-->
         <!--</dependency>-->
+
+        <!-- https://mvnrepository.com/artifact/us.monoid.web/resty -->
+        <dependency>
+        <groupId>us.monoid.web</groupId>
+        <artifactId>resty</artifactId>
+        <version>0.3.2</version>
+        </dependency>
 
     </dependencies>
     <build>
