--- a/website/mp-manager/pom.xml
+++ b/website/mp-manager/pom.xml
@@ -19,11 +19,11 @@
             <scope>provided</scope>
         </dependency>
         <!-- https://mvnrepository.com/artifact/org.json/json -->
-        <!--<dependency>-->
-            <!--<groupId>org.json</groupId>-->
-            <!--<artifactId>json</artifactId>-->
-            <!--<version>20171018</version>-->
-        <!--</dependency>-->
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20171018</version>
+        </dependency>
 
         <!-- https://mvnrepository.com/artifact/us.monoid.web/resty -->
         <dependency>
